force-app/main/default/objects/copadoAiHelper__Copado_AI_Companion_Prompt__mdt/copadoAiHelper__Copado_AI_Companion_Prompt__mdt.object-meta.xml
<CustomObject>
    <description>List of questions available for Copado AI Companion.

You can disable/enable questions and create new ones.</description>
    <label>Copado AI Companion Prompt</label>
    <pluralLabel>Copado AI Companion Prompts</pluralLabel>
</CustomObject>