force-app/main/default/objects/copadoAiHelper__Copado_AI_Companion_Prompt__mdt/fields/copadoAiHelper__Active__c.field-meta.xml
<CustomField>
    <fullName>copadoAiHelper__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Active, this Prompt will be visible in the AI Companion</description>
    <inlineHelpText>If Active, this Prompt will be visible in the AI Companion</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>