force-app/main/default/objects/copadoAiHelper__Copado_AI_Companion_Prompt__mdt/fields/copadoAiHelper__Assistant_prompt_after__c.field-meta.xml
<CustomField>
    <fullName>copadoAiHelper__Assistant_prompt_after__c</fullName>
    <description>Question/Prompt for ChatGPT. It can contain special keywords such as {title}, {project name} and others.
Consult the documentation to know which keywords are available for which Object
See this to understand the System messages role: https://platform.openai.com/docs/guides/gpt/chat-completions-api</description>
    <inlineHelpText>Question/Prompt for ChatGPT. It can contain special keywords such as {title}, {project name} and others.
Consult the documentation to know which keywords are available for which Object
See this to understand the System messages role: https://platform.openai.com/docs/guides/gpt/chat-completions-api</inlineHelpText>
    <label>Assistant prompt (after)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>