force-app/main/default/objects/copadoAiHelper__Copado_AI_Companion_Prompt__mdt/fields/copadoAiHelper__Language__c.field-meta.xml
<CustomField>
    <fullName>copadoAiHelper__Language__c</fullName>
    <description>Language of this Prompt, in the Salesforce&apos;s format &quot;en_US&quot;, &quot;en_UK&quot;. Empty Language will match for every user, regardless of its selected language. The end-user&apos;s language will be matched with the Prompt language.</description>
    <inlineHelpText>Language of this Prompt, in the Salesforce&apos;s format &quot;en_US&quot;, &quot;en_UK&quot;. Empty Language will match for every user, regardless of its selected language. The end-user&apos;s language will be matched with the Prompt language.</inlineHelpText>
    <label>Language</label>
    <length>100</length>
    <type>Text</type>
</CustomField>