force-app/main/default/objects/copadoAiHelper__Copado_AI_Companion_Prompt__mdt/fields/copadoAiHelper__Object__c.field-meta.xml
<CustomField>
    <fullName>copadoAiHelper__Object__c</fullName>
    <description>Copado Object associated with this Prompt. Read the documentation to know which Objects are supported</description>
    <inlineHelpText>Copado Object associated with this Prompt. Read the documentation to know which Objects are supported</inlineHelpText>
    <label>Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>