force-app/main/default/objects/copadoAiHelper__Copado_AI_Companion_Prompt__mdt/fields/copadoAiHelper__Order__c.field-meta.xml
<CustomField>
    <fullName>copadoAiHelper__Order__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Optional. Order in which the Questions will appear. If not set, or the number is duplicated, they will be shown by last modified date, newer first.</description>
    <inlineHelpText>Optional. Order in which the Questions will appear. If not set, or the number is duplicated, they will be shown by last modified date, newer first.</inlineHelpText>
    <label>Order</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>