force-app/main/default/objects/copadoAiHelper__Copado_AI_Companion_Prompt__mdt/fields/copadoAiHelper__Prompt__c.field-meta.xml
<CustomField>
    <fullName>copadoAiHelper__Prompt__c</fullName>
    <description>Question/Prompt for ChatGPT. It can contain special keywords such as {title}, {project name} and others.
Consult the documentation to know which keywords are available for which Object</description>
    <inlineHelpText>Question/Prompt for ChatGPT. It can contain special keywords such as {title}, {project name} and others.
Consult the documentation to know which keywords are available for which Object</inlineHelpText>
    <label>Prompt</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>