force-app/main/default/objects/copadoAiHelper__Copado_AI_Companion_Prompt__mdt/listViews/copadoAiHelper__All_Prompts_all_Fields.listView-meta.xml
<ListView>
    <fullName>copadoAiHelper__All_Prompts_all_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>copadoAiHelper__Prompt__c</columns>
    <columns>copadoAiHelper__Object__c</columns>
    <columns>copadoAiHelper__Language__c</columns>
    <columns>copadoAiHelper__Order__c</columns>
    <columns>copadoAiHelper__Active__c</columns>
    <columns>copadoAiHelper__System_prompt_before__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Prompts, all Fields</label>
</ListView>